--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "mysql2": "^3.10.0",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   }
 }
