--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^20.14.2",
     "@types/prompt-sync": "^4.2.3",
+    "@types/sentiment": "^5.0.4",
     "@types/socket.io-client": "^3.0.0",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "prompt-sync": "^4.2.0",
+    "sentiment": "^5.0.2",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   }
