--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
   "author": "Deepak Harsh",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.7",
+    "@types/sentiment": "^5.0.4",
     "@types/socket.io": "^3.0.2",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "mysql2": "^3.10.0",
+    "sentiment": "^5.0.2",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   }
