--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,5 +8,8 @@
     "skipLibCheck": true,
     "outDir": "./dist",
     "rootDir": "./src",                             /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
+
 }
